[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/healthbars/enemyhealth_empty.png" type="Texture" id=1]
[ext_resource path="res://ui/healthbars/enemyhealth_frame.png" type="Texture" id=2]
[ext_resource path="res://ui/healthbars/enemyhealth_full.png" type="Texture" id=3]
[ext_resource path="res://ui/font_8.tres" type="DynamicFont" id=4]
[ext_resource path="res://ui/healthbars/enemy_healthbar.gd" type="Script" id=5]

[node name="enemy_healthbar" type="Control"]
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bar_empty" type="Sprite" parent="."]
position = Vector2( 0, 5 )
texture = ExtResource( 1 )

[node name="bar_full" type="Sprite" parent="."]
position = Vector2( -60, -2 )
texture = ExtResource( 3 )
centered = false
region_enabled = true

[node name="frame" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="name_label" type="Label" parent="."]
margin_left = -43.0
margin_top = -11.0
margin_right = 77.0
margin_bottom = 3.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "APPLEFIGHT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level_label" type="Label" parent="."]
margin_left = 27.0
margin_top = -11.0
margin_right = 67.0
margin_bottom = 3.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "1"
align = 1

[node name="health_label" type="Label" parent="."]
margin_left = -16.0
margin_top = 2.0
margin_right = 24.0
margin_bottom = 16.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "18/18"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
